syntax = "proto3";
package product;

//creates service and the needed functions
service Product {
    rpc WarmUpCyclotron(Duration) returns(Reply){}
    rpc StartCyclotron(StartParamaters) returns (Reply){}
    rpc StopCyclotron(Message) returns (Reply){}
}

//time in seconds?
message Duration{
    int32 starttime = 1;
    int32 endtime = 2;
}

message StartParamaters{
    float cyclotronDiameter = 1;
    float inBetween = 2;
    int32 beamcurrentstart = 3;
    int32 beamcurrentend = 4;
}

message Reply{
    string text = 1;
}

message Message{
    string text = 1;
}